--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -138,7 +138,7 @@ fernandoepeso.info
      <div class="link-about-mobile"><a href="../pages/about">ABOUT</a></div>
      <div class="switch-view hov"></div>
   </div>
-  <div class="drop">
+  <div class="drop filt">
       <div class="link">FILTER</div>
       <div class="dropdown filter">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
