--- a/assets/style.css
+++ b/assets/style.css
@@ -400,7 +400,7 @@ header{
   display: block;
 }
 .dropdown{
-  display: none;
+  display: block;
   margin-top: -1px;
   border-left:0.5px solid var(--black);
   border-top:0.5px solid var(--black);
