--- a/assets/style.css
+++ b/assets/style.css
@@ -400,7 +400,7 @@ header{
   display: block;
 }
 .dropdown{
-  display: block;
+  display: none;
   margin-top: -1px;
   border-left:0.5px solid var(--black);
   border-top:0.5px solid var(--black);
@@ -1346,6 +1346,9 @@ div#related {
 }
 .drop.filt {
     grid-column: span 6;
+}
+.dropdown{
+  display: block;
 }
 }
 /*BIGGER DESKTOP*/
