--- a/assets/style.css
+++ b/assets/style.css
@@ -605,6 +605,9 @@ header{
   display: grid;
   margin-left: -12px;
 }
+.drop.filt {
+    grid-column: 4/span 1;
+}
 .dropped .info-product>div:nth-child(even) {
     grid-column: span 2!important;
     padding: 2px 2px 2px 5px;
