--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -143,8 +143,8 @@ fernandoepeso.info
       <div class="dropdown filter">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
             <div><a class="sort" data-sort="price">Low to high</a></div>
-            <div><a class="feat">Featured</a></div>
-            <div><a class="new">Newest</a></div>
+            <div><a class="filter-sort feat">Featured</a></div>
+            <div><a class="filter-sort new">Newest</a></div>
       </div>
   </div>
   </header>
