--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -7,21 +7,21 @@
 $(document).ready(function() {
   var width = $(window).width();
   if (width < 600){
-    $(".dropdown").removeClass("dropped");
-    $(".link").removeClass("active"); }
+    $("drop .dropdown").removeClass("dropped");
+    $("drop .link").removeClass("active"); }
   else{
-    $(".dropdown").addClass("dropped");
-    $(".link").addClass("active");
+    $("drop .dropdown").addClass("dropped");
+    $("drop.link").addClass("active");
   }
 });
 $(window).resize(function() {
   var width = $(window).width();
   if (width < 600){
-    $(".dropdown").removeClass("dropped");
-    $(".link").removeClass("active"); }
+    $("drop .dropdown").removeClass("dropped");
+    $("drop .link").removeClass("active"); }
   else{
-    $(".dropdown").addClass("dropped");
-    $(".link").addClass("active");
+    $("drop .dropdown").addClass("dropped");
+    $("drop .link").addClass("active");
   }
 });
 </script>
