--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -4,7 +4,7 @@
   {% endfor %}
 </div>
 <script>
-    $(".drop.filt .dropdown.dropped").removeClass("dropped");
+    $(".drop.filt .dropdown").removeClass("dropped");
 
 $(document).ready(function() {
   var width = $(window).width();
