--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -7,9 +7,11 @@
 $(document).ready(function() {
   var width = $(window).width();
   if (width < 600){
+    $(".filt .drop .dropdown").removeClass("dropped");
     $(".drop .dropdown").removeClass("dropped");
     $(".drop .link").removeClass("active"); }
   else{
+    $(".filt .drop .dropdown").removeClass("dropped");
     $(".drop .dropdown").addClass("dropped");
     $(".drop .link").addClass("active");
   }
@@ -17,9 +19,11 @@ $(document).ready(function() {
 $(window).resize(function() {
   var width = $(window).width();
   if (width < 600){
+    $(".filt .drop .dropdown").removeClass("dropped");
     $(".drop .dropdown").removeClass("dropped");
     $(".drop .link").removeClass("active"); }
   else{
+    $(".filt .drop .dropdown").removeClass("dropped");
     $(".drop .dropdown").addClass("dropped");
     $(".drop .link").addClass("active");
   }
