--- a/assets/style.css
+++ b/assets/style.css
@@ -615,7 +615,7 @@ header{
 .filt .link.active {
   border: 0.5px 0.5px 0.5px 0px solid var(--black);
 
-  background-color: red;
+  background-color: white;
   color:var(--black)!important;
 }
 .dropped .info-product>div:nth-child(even) {
