--- a/assets/style.css
+++ b/assets/style.css
@@ -612,11 +612,12 @@ header{
 .filt {
   grid-column: 5/ span 2;
 }
+.filt .link:hover {
+  border: 0.5px solid ;
+  background-color: grey!important;
+  color:var(--black)!important;
+}
 .filt .link.active {
-  border: 0.5px 0.5px 0.5px 0px solid var(--black);
-
-  background-color: white;
-  
   color:var(--black)!important;
 }
 .dropped .info-product>div:nth-child(even) {
