--- a/assets/style.css
+++ b/assets/style.css
@@ -609,10 +609,10 @@ header{
   display: grid;
   margin-left: -12px;
 }
-/* .filt {
+.filt {
   grid-column: 5/ span 2;
-} */
-/* .filt .link:hover {
+}
+.filt .link:hover {
   border: 0.5px solid ;
   background-color: grey!important;
   color:var(--black)!important;
@@ -620,7 +620,7 @@ header{
 .filt .link.active {
   background-color: transparent;
   color:var(--black)!important;
-} */
+}
 .dropped .info-product>div:nth-child(even) {
     grid-column: span 2!important;
     padding: 2px 2px 2px 5px;
