--- a/assets/style.css
+++ b/assets/style.css
@@ -613,7 +613,7 @@ header{
   grid-column: 5/ span 2;
 }
 .filt .link:hover {
-  background-color: grey!important;
+  background-color: lightgrey!important;
   color:var(--black)!important;
 }
 .filt .link.active {
