--- a/assets/style.css
+++ b/assets/style.css
@@ -620,6 +620,10 @@ header{
   background-color: transparent;
   color:var(--black)!important;
 }
+.filt .dropdown.filter>div:hover {
+  background-color: lightgrey
+  color: var(--black);
+}
 .dropped .info-product>div:nth-child(even) {
     grid-column: span 2!important;
     padding: 2px 2px 2px 5px;
