--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,7 +113,7 @@ fernandoepeso.info
     <div class="menu-open">MENU</div>
 
     <div class="menu">
-      <div class="drop">
+      <div class="drop normal">
         <div class="link">DESIGNERS</div>
         <div class="dropdown">
           {% for link in linklists.designers.links %}
@@ -121,7 +121,7 @@ fernandoepeso.info
           {% endfor %}
         </div>
       </div>
-      <div class="drop">
+      <div class="drop normal">
         <div class="link">SHOP</div>
         <div class="dropdown">
           {% for link in linklists.categories.links %}
@@ -138,7 +138,7 @@ fernandoepeso.info
      <div class="link-about-mobile"><a href="../pages/about">ABOUT</a></div>
      <div class="switch-view hov"></div>
   </div>
-  <div class="drop filt ">
+  <div class="drop filt">
       <div class="link">FILTER</div>
       <div class="dropdown filter">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
