--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -8,21 +8,21 @@
 $(document).ready(function() {
   var width = $(window).width();
   if (width < 600){
-    $(".dropdown").removeClass("dropped");
-    $(".link").removeClass("active"); }
+    $(".normal .dropdown").removeClass("dropped");
+    $(".normal .link").removeClass("active"); }
   else{
-    $(".dropdown").addClass("dropped");
-    $(".link").addClass("active");
+    $(".normal .dropdown").addClass("dropped");
+    $(".normal .link").addClass("active");
   }
 });
 $(window).resize(function() {
   var width = $(window).width();
   if (width < 600){
-    $(".dropdown").removeClass("dropped");
-    $(".link").removeClass("active"); }
+    $(".normal .dropdown").removeClass("dropped");
+    $(".normal .link").removeClass("active"); }
   else{
-    $(".dropdown").addClass("dropped");
-    $(".link").addClass("active");
+    $(".normal .dropdown").addClass("dropped");
+    $(".normal .link").addClass("active");
   }
 });
 </script>
