--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -139,7 +139,7 @@ fernandoepeso.info
      <div class="switch-view hov"></div>
   </div>
   <div class="drop filt">
-      <div class="link">FILTER</div>
+      <div class="link">Filter</div>
       <div class="dropdown filter">
             <div><a class="sort invert" data-sort="price">Hight to Low</a></div>
             <div><a class="sort" data-sort="price">Low to high</a></div>
